Updated poms to newer, parameter-driven, simpler structure.