@@ -31,7 +31,7 @@
     <parent>
         <groupId>se.jguru.nazgul.tools.poms.external</groupId>
         <artifactId>nazgul-tools-external-parent</artifactId>
-        <version>2.0.6</version>
+        <version>2.0.7-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -39,10 +39,9 @@
     <artifactId>nazgul-core-parent</artifactId>
     <version>1.4.4-SNAPSHOT</version>
     <name>${project.artifactId}</name>
+    <url>${url.prefix}/${path.in.reactor}</url>
     <packaging>pom</packaging>
-    <description>The Nazgul Framework: Core project holds a collection of library-style Software Components
-        adhering to the Nazgul-style component patterns, aimed at boosting productivity.
-        All Software Components are compliant with Java SE, OSGi and JEE standards.</description>
+    <description>The Nazgul Framework: Core project holds a collection of library-style Software Components adhering to the Nazgul-style component patterns, aimed at boosting productivity. All Software Components are compliant with Java SE, OSGi and JEE standards.</description>
 
     <licenses>
         <license>
@@ -71,7 +70,7 @@
         <!--
             Supply the version of the Nazgul Tools framework as a Property.
         -->
-        <nazgul.tools.version>2.0.6</nazgul.tools.version>
+        <nazgul.tools.version>2.0.7-SNAPSHOT</nazgul.tools.version>
 
         <!--
             Other, external version properties.
@@ -86,7 +85,17 @@
         <aries.blueprintcore.version>1.1.0</aries.blueprintcore.version>
         <aries.blueprint.version>1.1.0</aries.blueprint.version>
         <test.bundles.version>2.0.0</test.bundles.version>
-        <nazgul.core.version>1.4.3-SNAPSHOT</nazgul.core.version>
+
+        <surefire.argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m -javaagent:${basedir}/target/openjpa.jar</surefire.argLine>
+
+        <!--
+            Define the URL prefixes for Site Deployment and DistributionManagement.
+            These can be overridden in sub-reactors to tailor releases to other locations.
+        -->
+        <reactor.name>nazgul_core</reactor.name>
+        <url.prefix>${reactor.url.remote.prefix}/${reactor.name}/${project.version}</url.prefix>
+        <distro.url.prefix>${site.url.prefix}/${reactor.name}/${project.version}</distro.url.prefix>
+        <path.in.reactor>core/poms/core-parent</path.in.reactor>
     </properties>
 
     <!--
@@ -184,7 +193,7 @@
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa</artifactId>
-            <version>${openjpa.version}</version>
+            <version>${openjpa.version}</version><!--$NO-MVN-MAN-VER$-->
             <scope>runtime</scope>
         </dependency>
     </dependencies>
@@ -208,16 +217,6 @@
         </resources>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Export-Package>{local-packages}</Export-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
 
             <!--
                 Use the dependency plugin to copy the OpenJPA runtime
@@ -256,157 +255,20 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <forkMode>pertest</forkMode>
-                    <argLine>-javaagent:${basedir}/target/openjpa.jar</argLine>
+                    <argLine>${surefire.argLine}</argLine>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.5</version><!--$NO-MVN-MAN-VER$-->
                 <configuration>
                     <includes>
                         <include>**/*.java</include>
                     </includes>
                     <outputDirectory>${project.build.directory}/jaxb2/transformed/generated-schema</outputDirectory>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven.release.plugin.version}</version>
-                <configuration>
-                    <localCheckout>true</localCheckout>
-                    <tagNameFormat>nazgul-core-@{project.version}</tagNameFormat>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-hg</artifactId>
-                        <version>1.7</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <!--
-                To deploy a Staged site for the Nazgul Tools reactor, perform the following:
-
-                a) Define a settings.xml server setting with the id jGuru_NazgulToolsSite:
-
-                    <server>
-                        <id>jGuru_NazgulToolsSite</id>
-                        <username>yourUserName</username>
-                        <privateKey>[path to your SSH private key]</privateKey>
-                        <passphrase>[password for your SSH private key]</passphrase>
-                        <filePermissions>664</filePermissions>
-                        <directoryPermissions>755</directoryPermissions>
-                    </server>
-
-                   There are other security options than a certificate, as explained in
-                   http://maven.apache.org/settings.html#Servers
-
-                b) If you use certificate security as illustrated above, ensure that your *public* SSH key is
-                   copied to the target server's SSH daemon's recognitioning file.
-
-                   For example, on a Linux server this is typically done by appending your public SSH key to
-                   the ${HOME}/.ssh/authorized_keys file of the account you want to use to deploy your staged site.
-
-                   This process is better described on the net:
-
-                   Linux:       http://www.csua.berkeley.edu/~ranga/notes/ssh_nopass.html
-                   Mac OS X:    http://xiix.wordpress.com/2007/03/31/how-to-set-up-public-key-authentication-pka-on-your-mac/
-                   Windows:     http://comptb.cects.com/1439-openssh-rsa-authentication-for-windows-and-linux
-
-                d) Ensure that all the distributionManagement/site/url's relate to the topSiteURL value as the
-                   staged project site should relate to the top of the site. Assuming that the topSiteURL is
-                   ${nazgul-tools.sitedeploy.url}/version/${project.version}/ and your project Foo should reside
-                   immediately below the root, the distributionManagement/site/url in that project should be defined
-                   as ${nazgul-tools.sitedeploy.url}/version/${project.version}/foo.
-
-                   Also, ensure that the distributionManagement/site/id is "jGuru_NazgulToolsSite", as illustrated
-                   below:
-
-                    <distributionManagement>
-                        <site>
-                            <id>jGuru_NazgulToolsSite</id>
-                            <name>jGuru_NazgulToolsSite</name>
-                            <url>${nazgul-tools.sitedeploy.url}/version/${project.version}/path/to/project</url>
-                        </site>
-                    </distributionManagement>
-
-                e) Fire the two commands after one another:
-
-                   mvn clean site
-
-                   mvn -Dnazgul-tools.sitedeploy.url=scp://yourhost/path/to/deployment/root site:stage-deploy
-
-                   where "yourhost" is the same server you uploaded the ssh certificate to in step (b).
-                   The staged site should now reside in the directory
-                   /path/to/deployment/root/version/${project.version}/staging
-                   on the "yourhost" server.
-
-                f) For simplicity, if you upload the site to the same host and location most of the time,
-                   you are recommended to create a Maven profile within the settings.xml file defining the
-                   property nazgul-tools.sitedeploy.url. Such a profile is created by adding the following
-                   to the ${HOME}/.m2/settings.xml file:
-
-                   ...
-                   <profiles>
-                        <profile>
-                            <id>siteDeploy</id>
-                            <properties>
-                                <nazgul-tools.sitedeploy.url>[your url here]</nazgul-tools.sitedeploy.url>
-                            </properties>
-                        </profile>
-                   </profiles>
-
-
-                   This way you need not submit it on the command line as
-                   illustrated in (e) above, but instead use the command:
-
-                   mvn -PsiteDeploy site:stage-deploy
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.3</version>
-                <executions>
-                    <execution>
-                        <id>attach-descriptor</id>
-                        <goals>
-                            <goal>attach-descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <topSiteURL>${nazgul-core.sitedeploy.url}/version/${project.version}/</topSiteURL>
-                    <generateSitemap>true</generateSitemap>
-                    <inputEncoding>UTF-8</inputEncoding>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.wagon</groupId>
-                        <artifactId>wagon-ssh</artifactId>
-                        <version>2.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.wagon</groupId>
-                        <artifactId>wagon-file</artifactId>
-                        <version>2.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.doxia</groupId>
-                        <artifactId>doxia-module-markdown</artifactId>
-                        <version>1.3</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.doxia</groupId>
-                        <artifactId>doxia-module-xhtml</artifactId>
-                        <version>1.3</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -416,6 +278,7 @@
     # Section 4:  External systems
     ################################################
     -->
+
     <!--
         Define repository settings for Maven's deploy and release plugins.
         Moved to settings.xml, as per recommendation within Maven specs.
@@ -424,20 +287,17 @@
         <site>
             <id>jGuru_NazgulCoreSite</id>
             <name>jGuru_NazgulCoreSite</name>
-            <url>${nazgul-core.sitedeploy.url}/version/${project.version}/core/poms/core-parent</url>
+            <url>${distro.url.prefix}/${path.in.reactor}</url>
         </site>
     </distributionManagement>
 
+    <!--
+       Define connections for Maven's VCS integration.
+    -->
     <scm>
-        <url>https://bitbucket.org/lennartj/nazgul_core</url>
-        <connection>scm:hg:https://bitbucket.org/lennartj/nazgul_core</connection>
-        <developerConnection>scm:hg:file://${basedir}/../../../</developerConnection>
+        <connection>${scm.url.prefix}/${reactor.name}</connection>
+        <developerConnection>${scm.url.prefix}/${reactor.name}</developerConnection>
+        <url>${reactor.url.remote.prefix}/${reactor.name}</url>
         <tag>HEAD</tag>
     </scm>
-
-    <issueManagement>
-        <system>bitbucket</system>
-        <url>https://bitbucket.org/lennartj/nazgul_core/issues</url>
-    </issueManagement>
-
 </project>
